src/test/resources/shexTest/negativeStructure/TwoNegation2.shex
PREFIX :       <http://example.org/>

:S ( (NOT @:T) AND @:U )
:T { :a NOT @:S } 
:U { :b @:S } 
